--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
         <ehcache.version>3.4.0</ehcache.version>
 
         <!--webjars-->
-        <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
-        <webjars-jquery.version>3.2.1</webjars-jquery.version>
-        <webjars-datetimepicker.version>2.5.11</webjars-datetimepicker.version>
+        <webjars-bootstrap.version>4.1.0</webjars-bootstrap.version>
+        <webjars-jquery.version>3.3.1-1</webjars-jquery.version>
+        <webjars-datetimepicker.version>2.5.14</webjars-datetimepicker.version>
         <webjars-noty.version>3.1.0</webjars-noty.version>
         <webjars-datatables.version>1.10.16</webjars-datatables.version>
     </properties>
@@ -253,7 +253,7 @@
 
         <!-- Webjars (static dependencies distributed as JAR files) -->
         <dependency>
-            <groupId>org.webjars.bower</groupId>
+            <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>${webjars-jquery.version}</version>
         </dependency>
